--- a/apps/website/mfe/src/app/pages/coming-soon/coming-soon.component.html
+++ b/apps/website/mfe/src/app/pages/coming-soon/coming-soon.component.html
@@ -1,34 +1,103 @@
-<main role="main" class="d-flex flex-column container mx-auto">
-    <div class="row d-flex align-items-center" style="row-gap: 24px;">
-        <div class="col-12 col-md-6">
-            <div class="coming-soon-header title-gradient">We are creating <span class="fs-5">something</span> amazing
-                for
-                you💜
-                <br>
-                <span class="coming-soon-helper-text title-gradient fs-6">All Good Things Come to Those who
-                    Wait...
-                    James
-                    5:7-11
-                </span>
+<section class="bg-light-900 ">
+    <div class="container flex items-center justify-center min-h-screen px-6 py-12 mx-auto">
+        <div class="w-full ">
+            <div class="flex flex-col items-center max-w-lg mx-auto text-center">
+                <p class="text-sm font-medium text-primary-600">Page under contruction</p>
+                <h1 class="mt-3 text-2xl font-semibold text-dark-900">We are creating</h1>
+                <p class="mt-4 text-dark-600">Something amazing for you<br>Let’s find a better place for you to go.</p>
 
+                <div class="flex items-center w-full mt-6 gap-x-3 shrink-0 sm:w-auto">
+                    <a [routerLink]="['/']"
+                        class="flex items-center justify-center w-1/2 px-5 py-2 text-sm text-dark-900 transition-colors duration-200 bg-light-900 border rounded-lg  gap-x-2 sm:w-auto hover:bg-dark-100">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-5 h-5 rtl:rotate-180">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M6.75 15.75L3 12m0 0l3.75-3.75M3 12h18" />
+                        </svg>
+                        <span>Go back</span>
+                    </a>
+
+                    <a [routerLink]="['/']"
+                        class="w-1/2 px-5 py-2 text-sm tracking-wide text-light-900 transition-colors duration-200 bg-primary-900 rounded-lg shrink-0 sm:w-auto hover:bg-dark-900">
+                        Take me home
+                    </a>
+                </div>
+            </div>
+
+            <div class="grid w-full max-w-6xl grid-cols-1 gap-8 mx-auto mt-8 sm:grid-cols-2 lg:grid-cols-3">
+                <div class="p-6 rounded-lg bg-primary-100">
+                    <span class="text-dark-600">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z" />
+                        </svg>
+                    </span>
+
+                    <h3 class="mt-6 font-medium text-dark-900 ">Resources</h3>
+
+                    <p class="mt-2 text-dark-600 ">Dive in to gell all resources for organizing your space</p>
+
+                    <a [routerLink]="'/resources'"
+                        class="inline-flex items-center mt-4 text-sm text-primary-900 gap-x-2  hover:gap-x-3 hover:duration-200">
+                        <span>Get all resources</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-5 h-5 rtl:rotate-180">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
+                        </svg>
+                    </a>
+                </div>
+
+                <div class="p-6 rounded-lg bg-primary-100">
+                    <span class="text-dark-600">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M12 6.042A8.967 8.967 0 006 3.75c-1.052 0-2.062.18-3 .512v14.25A8.987 8.987 0 016 18c2.305 0 4.408.867 6 2.292m0-14.25a8.966 8.966 0 016-2.292c1.052 0 2.062.18 3 .512v14.25A8.987 8.987 0 0018 18a8.967 8.967 0 00-6 2.292m0-14.25v14.25" />
+                        </svg>
+                    </span>
+
+                    <h3 class="mt-6 font-medium text-dark-900 ">Our blog</h3>
+
+                    <p class="mt-2 text-dark-600">Read the latest posts on our blog.</p>
+
+                    <a [routerLink]="'/blog'"
+                        class="inline-flex items-center mt-4 text-sm text-primary-900 gap-x-2  hover:gap-x-3 hover:duration-200">
+                        <span>View lastest posts</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-5 h-5 rtl:rotate-180">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
+                        </svg>
+                    </a>
+                </div>
+
+                <div class="p-6 rounded-lg bg-primary-100">
+                    <span class="text-dark-600">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M12 20.25c4.97 0 9-3.694 9-8.25s-4.03-8.25-9-8.25S3 7.444 3 12c0 2.104.859 4.023 2.273 5.48.432.447.74 1.04.586 1.641a4.483 4.483 0 01-.923 1.785A5.969 5.969 0 006 21c1.282 0 2.47-.402 3.445-1.087.81.22 1.668.337 2.555.337z" />
+                        </svg>
+                    </span>
+
+                    <h3 class="mt-6 font-medium text-dark-900 ">Chat with us</h3>
+
+                    <p class="mt-2 text-dark-600 ">Can’t find what you’re looking for?</p>
+
+                    <a href="mailto:clutterfreefinds@gmail.com"
+                        class="inline-flex items-center mt-4 text-sm text-primary-900 gap-x-2  hover:gap-x-3 hover:duration-200">
+                        <span>Chat to our team</span>
+
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-5 h-5 rtl:rotate-180">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M17.25 8.25L21 12m0 0l-3.75 3.75M21 12H3" />
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="d-none d-md-block col-12 col-md-6">
-            <img loading="lazy" class="img-fluid" src="/assets/images/coming-soon.png" alt="">
-        </div>
     </div>
-
-    <div class="row my-5  mx-auto">
-        <div class="col">
-            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.FACEBOOK"><img loading="lazy"
-                    src="assets/icons/social/facebook-purple.svg" alt="" width="24" height="24" /></a>
-        </div>
-        <div class="col">
-            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.INSTAGRAM"><img loading="lazy"
-                    src="assets/icons/social/instagram-purple.svg" alt="" width="24" height="24" /></a>
-        </div>
-        <div class="col">
-            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.TIKTOK"><img loading="lazy"
-                    src="assets/icons/social/tiktok-purple.svg" alt="" width="24" height="24" /></a>
-        </div>
-    </div>
+</section>
