--- a/apps/website/mfe/src/app/pages/home-page/home-page.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/home-page.component.html
@@ -6,5 +6,5 @@
   <cff-v2-our-community></cff-v2-our-community>
   <cff-v2-how-we-do-it></cff-v2-how-we-do-it>
   <cff-v2-faq-section></cff-v2-faq-section>
-  <!--<wc-how-it-works></wc-how-it-works> -->
+  <wc-how-it-works></wc-how-it-works>
 </main>
