--- a/libs/shared/footer/src/lib/footer/footer.component.html
+++ b/libs/shared/footer/src/lib/footer/footer.component.html
@@ -6,7 +6,7 @@
                     <img loading="lazy" src="assets/images/logo-white.svg" alt="clutter free finds logo" class="mb-4"
                         width="200" height="50" />
                 </a>
-                <div class="mb-3 md:mb-6 w-9/12"><span class="font-extrabold">Clutter Free Finds: </span>
+                <div class="mb-3 md:mb-6 lg:w-9/12"><span class="font-extrabold">Clutter Free Finds: </span>
                     <span class="text-light-600">{{'FOOTER.DESCRIPTION' | translate}}</span>
                 </div>
                 <div class="flex gap-10 mb-3 md:mb-6">
@@ -62,8 +62,7 @@
                             : ('FOOTER.NEWSLETTER.BUTTON' | translate)
                             }}
                             <div *ngIf="newsletterProgress" role="status">
-                                <svg aria-hidden="true"
-                                    class="w-6 h-6 text-gray-200 animate-spin dark:text-gray-600 fill-primary-600"
+                                <svg aria-hidden="true" class="w-6 h-6 text-gray-200 animate-spin "
                                     viewBox="0 0 100 101" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
@@ -90,8 +89,7 @@
             <div class="w-full lg:w-9/12 grid md:grid-cols-2 gap-2.5 ml-auto">
                 <ng-container *ngFor="let ctaLink of footerCTA; first as isFirst">
                     <a [attr.href]="ctaLink.link" [attr.target]="isFirst ? null : '_blank'" rel="noopener"
-                        (click)="isFirst ? copyToClipboard() : null"
-                        [attr.data-tooltip-target]="isFirst ? 'tooltip-animation' : null"
+                        (click)="isFirst ? sendUsAnEmailPopUp() : null"
                         class="flex items-center gap-2.5 bg-light-300 p-3 rounded-lg mb-3 md:mb-0">
                         <img loading="lazy" [src]="'assets/icons/' + ctaLink.image + '.svg'" alt="" width="45"
                             height="45" />
@@ -101,11 +99,6 @@
                         </div>
                     </a>
                 </ng-container>
-                <div id="tooltip-animation" role="tooltip"
-                    class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip dark:bg-gray-700">
-                    {{(emailTooltip$ | async)| translate}}
-                    <div class="tooltip-arrow" data-popper-arrow></div>
-                </div>
             </div>
         </div>
         <hr class="my-6 border-light-100 sm:mx-auto" />
@@ -126,3 +119,96 @@
         </div>
     </div>
 </footer>
+
+<div #emailPopupRef id="email-popup" tabindex="-1"
+    class=" hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full">
+    <div class="relative p-4 w-full max-w-lg h-full md:h-auto">
+        <div class="relative p-4 bg-white rounded-lg shadow dark:bg-gray-800 md:p-8">
+            <!-- Modal header -->
+            <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+                    Send us your Inquiry
+                </h3>
+            </div>
+            <form class="p-4 md:p-5" [formGroup]="inquiryForm">
+                <div class="grid gap-4 mb-4 grid-cols-2">
+                    <div class="col-span-2">
+                        <label for="name"
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
+                        <input type="text" name="name" id="name"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 "
+                            placeholder="Your name" required="" formControlName="name">
+                        <div *ngIf="inquiryForm.get('name')?.invalid && (inquiryForm.get('name')?.dirty || inquiryForm.get('name')?.touched)"
+                            class="flex  items-center mt-2">
+                            <div class="mr-2"> <img loading="lazy" src="/assets/icons/error.svg" alt="" width="16">
+                            </div>
+                            <div class="text-sm text-danger-900 ">Name is required</div>
+                        </div>
+                    </div>
+                    <div class="col-span-2">
+                        <label for="email"
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
+                        <input type="email" name="email" id="email"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 "
+                            placeholder="Your Email" required="" formControlName="email">
+                        <div *ngIf="inquiryForm.get('email')?.invalid && (inquiryForm.get('email')?.dirty || inquiryForm.get('email')?.touched)"
+                            class="flex  items-center mt-2">
+                            <div class="mr-2"> <img loading="lazy" src="/assets/icons/error.svg" alt="" width="16">
+                            </div>
+                            <div class="text-sm text-danger-900 ">Enter a correct email</div>
+                        </div>
+                    </div>
+                    <div class="col-span-2">
+                        <label for="phone"
+                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone</label>
+                        <input type="text" name="phone" id="phone"
+                            class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 "
+                            placeholder="Phone Number (Whatsapp)" required="" formControlName="phone">
+                        <div *ngIf="inquiryForm.get('phone')?.invalid && (inquiryForm.get('phone')?.dirty || inquiryForm.get('phone')?.touched)"
+                            class="flex  items-center mt-2">
+                            <div class="mr-2"> <img loading="lazy" src="/assets/icons/error.svg" alt="" width="16">
+                            </div>
+                            <div class="text-sm text-danger-900 ">Phone is required</div>
+                        </div>
+                    </div>
+                    <div class="col-span-2">
+                        <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Your
+                            Inquiry
+                            Message</label>
+                        <textarea id="message" rows="4"
+                            class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-600 focus:border-primary-600"
+                            placeholder="Write your Inquiry message here" formControlName="message"></textarea>
+                        <div *ngIf="inquiryForm.get('message')?.invalid && (inquiryForm.get('message')?.dirty || inquiryForm.get('message')?.touched)"
+                            class="flex  items-center mt-2">
+                            <div class="mr-2"> <img loading="lazy" src="/assets/icons/error.svg" alt="" width="16">
+                            </div>
+                            <div class="text-sm text-danger-900 ">Message inquiry is required</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="items-center justify-between space-y-4 sm:flex sm:space-y-0">
+                    <button type="button" (click)="sendInquiryRequest()" [class.bg-primary-600]="inquiryForm.invalid"
+                        [class.bg-primary-900]="inquiryForm.valid" [class.cursor-not-allowed]="inquiryForm.invalid"
+                        [disabled]="inquiryForm.invalid" type="submit"
+                        class="flex gap-2 items-center focus:outline-none text-light-900   focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5">
+                        Send
+                        <div *ngIf="inquiryProgress$ | async" role="status">
+                            <svg aria-hidden="true" class="w-4 h-4 text-gray-200 animate-spin " viewBox="0 0 100 101"
+                                fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+                                    fill="currentColor" />
+                                <path
+                                    d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+                                    fill="currentFill" />
+                            </svg>
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                    </button>
+                    <button (click)="closeEmailPopup()" id="close-modal" type="button"
+                        class="py-2 px-4 w-full text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-200 sm:w-auto hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-primary-300 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
